# IITP_DroneSimulator

./: .gitignore  .gitmodules  MultiAgentEnv.py  README.md  main_qmix.py  main_vdn.py
GazeboGym/: README.md
GazeboGym/MAVSDK/: README.md
GazeboGym/MAVSDK/src/: MultiAgentEnv.py  main.py
GazeboGym/MAVSDK/src/Env/: MultiAgentEnv.py
GazeboGym/ROS2/src/px4_control/: setup.py
GazeboGym/src/px4_control/: package.xml
cooperative_marl_ros/src/robot_control/scripts/qmix_models/: agent_model.th  mixer_model.th
cooperative_marl_ros/src/robot_control/scripts/qmix_models/reward_print/: agent_model.th  mixer_model.th  optimizer.th
cooperative_marl_ros/src/robot_control/scripts/qmix_models_old/: agent_model.th  mixer_model.th  optimizer.th
cooperative_marl_ros/src/robot_control/scripts/qmix_models_old_2/: agent_model.th  mixer_model.th
cooperative_marl_ros/src/robot_control/scripts/qmix_models_old_2/reward_modi/: agent_model.th  mixer_model.th  optimizer.th
cooperative_marl_ros/src/robot_control/scripts/vdn_models/: agent_model.th  optimizer.th
src/robot_control/: CMakeLists.txt
src/robot_control/scripts/configs/: arguments.py  qmix_config.py  vdn_config.py
src/robot_control/scripts/marltoolkit/agents/: __init__.py  qmix_agent.py  vdn_agent.py
src/robot_control/scripts/marltoolkit/modules/actors/: __init__.py
src/robot_control/scripts/marltoolkit/runners/: episode_runner.py
src/robot_control/scripts/marltoolkit/utils/: __init__.py
src/robot_control/scripts/marltoolkit/utils/logger/: __init__.py  base.py  logs.py
src/robot_control/scripts/qmix_models/: mixer_model.th  optimizer.th
src/robot_control/scripts/vdn_models/: agent_model.th
src/robot_simulation/robot_description/config/: robot_1_controller.yaml  robot_2_controller.yaml  robot_3_controller.yaml
src/robot_simulation/robot_description/meshes/DAE/base/: base_link_robot_1.dae  base_link_robot_2.dae  base_link_robot_3.dae
src/robot_simulation/robot_description/meshes/STL/base/: base_link.stl
src/robot_simulation/robot_description/robot/: robot.xacro  robot_control_gazebo.xacro
src/robot_simulation/robot_description/robot/parts/base/: base.xacro
src/robot_simulation/robot_gazebo/launch/: main.launch.xml  spawn_in_gazebo.launch.py  spawn_with_control.launch.xml  start_control.launch.py  start_world.launch.py
src/robot_simulation/robot_gazebo/worlds/: cooperative_sim.world
src_mlic/MultiRoboLearn/MultiRoboLearn/: CMakeLists.txt  package.xml  setup.py
src_mlic/MultiRoboLearn/MultiRoboLearn/action/: Drone.action
src_mlic/MultiRoboLearn/MultiRoboLearn/src/openai_ros/: __init__.py  gazebo_connection.py  robot_gazebo_env.py  robot_gazebo_env_goal.py
src_mlic/MultiRoboLearn/MultiRoboLearn/src/openai_ros.egg-info/: PKG-INFO  SOURCES.txt
src_mlic/MultiRoboLearn/MultiRoboLearn/src/openai_ros/drone_action/: __init__.py  action_client_server.launch  action_test.launch  drone_action_client.py  drone_action_server.py
src_mlic/algorithms/algorithms_example/: test.py
src_mlic/algorithms/algorithms_example/config/: continous_multiagent_drone_SAC_params_V1.yaml
src_mlic/algorithms/algorithms_example/launch/: start_multiagent_drone_SAC.launch  start_multiagent_drone_single_test.launch  start_multiagent_drone_test.launch
src_mlic/algorithms/algorithms_example/scripts/: training_test.py
src_mlic/algorithms/algorithms_example/scripts/cnn/: __init__.py  resize_net.py
src_mlic/algorithms/algorithms_example/scripts/multi-sac/: model.py  reset_test.py  sac.py
src_mlic/algorithms/algorithms_example/scripts/single_sac/: main.py  model.py  sac.py
(+14 files in other folders)
